<resources>
    <string name="app_name">玩一下游戏</string>
    <string name="lyy_wyx">玩一下</string>
    <string name="default_progress_tip">正在加载...</string>
    <string name="tab_home">首页</string>
    <string name="tab_game">游戏大厅</string>
    <string name="tab_mall">商城</string>
    <string name="tab_me">我的</string>
    <string name="message_center">消息中心</string>
    <string name="lyy_close">关闭</string>
    <string name="lyy_favourite">收藏</string>
    <string name="lyy_cancel_favourite">取消收藏</string>
    <string name="lyy_exchange">兑换</string>
    <string name="lyy_category_all">全部</string>
    <string name="lyy_category_vir">虚拟物品</string>
    <string name="lyy_category_mat">手办周边</string>
    <string name="lyy_ex_history">兑换记录</string>
    <string name="lyy_buy">购买</string>
    <string name="lyy_ex_coupon">乐盈劵兑换</string>
    <string name="lyy_ex_score">积分兑换</string>
    <string name="lyy_pay_recharge_record">充值明细</string>
    <string name="lyy_pay_expense_record">消费记录</string>
    <string name="lyy_pay_coins">乐盈币支付</string>
    <string name="lyy_pay_deal_success">交易成功</string>
    <string name="lyy_pay_deal_failure">交易失败</string>
    <string name="lyy_me_score">积分：</string>
    <string name="lyy_me_coins">乐盈币：</string>
    <string name="lyy_me_coupon">乐盈券：</string>
    <string name="lyy_me_recharge">充值</string>
    <string name="lyy_me_get_coin_tip">赚积分</string>
    <string name="lyy_me_my_favourite">我的收藏</string>
    <string name="lyy_me_my_ex_history">兑换记录</string>
    <string name="lyy_me_my_message">我的消息</string>
    <string name="lyy_me_my_address">收货地址</string>
    <string name="lyy_me_game_transfer_details">游戏划账</string>
    <string name="lyy_me_coupon_transfer_details">乐盈劵兑换</string>
    <string name="lyy_me_recharge_details">充值明细</string>
    <string name="lyy_me_download_manager">下载管理</string>
    <string name="lyy_me_my_feedback">建议反馈</string>
    <string name="lyy_me_my_contact">联系我们</string>
    <string name="lyy_me_my_update">检查更新</string>
    <string name="lyy_exit_account">退出当前账号</string>
    <string name="lyy_me_tour">泰国游活动</string>
    <string name="lyy_me_my_buy_history">购买记录</string>
    <string name="lyy_account_login">登录</string>
    <string name="lyy_account_hint_account">请输入您的账号</string>
    <string name="lyy_account_hint_password">请输入密码</string>
    <string name="lyy_account_hint_password_length">请输入密码</string>
    <string name="lyy_account_hint_password_error">您输入的密码不一致</string>
    <string name="lyy_account_reset_password_error">密码长度应至少8位</string>
    <string name="lyy_account_reset_password_old_pw_error">请输入原密码</string>
    <string name="lyy_account_reset_password_new_pw_error">请输入新密码</string>
    <string name="lyy_account_register">注册账号</string>
    <string name="lyy_account_phone_not_register">该手机未注册</string>
    <string name="lyy_account_forgot_password">忘记密码？</string>
    <string name="lyy_login_third_way">其他登录方式</string>
    <string name="lyy_wechat">微信</string>
    <string name="lyy_weibo">微博</string>
    <string name="lyy_qq">QQ</string>
    <string name="lyy_enter">进入</string>
    <string name="lyy_account_title_register">注册</string>
    <string name="lyy_account_title_pwd_retrieve">找回密码</string>
    <string name="lyy_account_auth_get">获取验证码</string>
    <string name="lyy_account_auth_re_get">重新获取</string>
    <string name="lyy_account_auth_cd_format">%1$dS</string>
    <string name="lyy_account_hint_phone">请输入手机号</string>
    <string name="lyy_account_hint_auth_code">请输入验证码</string>
    <string name="lyy_account_agreement_prefix">注册即表示同意</string>
    <string name="lyy_agreement_with_quotes">《用户协议》</string>
    <string name="lyy_user_agreement_title">用户协议</string>
    <string name="lyy_next">下一步</string>
    <string name="lyy_account_hint_password_again">请再次输入密码</string>
    <string name="lyy_account_invite_code">请输入邀请码：</string>
    <string name="lyy_account_hint_invite_code">（非必填）</string>
    <string name="lyy_account_country_code_china">+86</string>
    <string name="lyy_game_hall">游戏大厅</string>
    <string name="lyy_section_played">我玩过的</string>
    <string name="lyy_section_only">独家游戏</string>
    <string name="lyy_section_rec">精品推荐</string>
    <string name="lyy_section_hot">热门游戏</string>
    <string name="lyy_section_online">网络游戏</string>
    <string name="lyy_section_offline">单机精品</string>
    <string name="lyy_section_new">最新游戏</string>
    <string name="lyy_section_rec_weekly">本周推荐</string>
    <string name="lyy_section_more"><![CDATA[更多 >]]></string>
    <string name="lyy_start_game">开始玩</string>
    <string name="lyy_section_activity">活动专题</string>
    <string name="lyy_category_rec">推荐</string>
    <string name="lyy_category_3d">3D策略</string>
    <string name="lyy_category_slg">战争策略</string>
    <string name="lyy_category_casual">休闲竞技</string>
    <string name="lyy_category_rpg">角度扮演</string>
    <string name="lyy_category_chess">棋牌</string>
    <string name="lyy_category_shoot">射击</string>
    <string name="lyy_home_rec">推荐</string>
    <string name="lyy_home_only">独家</string>
    <string name="lyy_home_offline">单机</string>
    <string name="lyy_home_online">网游</string>
    <string name="lyy_info_title">个人资料</string>
    <string name="lyy_info_avatar">头像</string>
    <string name="lyy_info_account">账号</string>
    <string name="lyy_info_nickname">昵称</string>
    <string name="lyy_info_gender">性别</string>
    <string name="lyy_info_real_auth">实名认证</string>
    <string name="lyy_info_qq">QQ号码</string>
    <string name="lyy_info_region">所在地区</string>
    <string name="lyy_info_modify_password">修改密码</string>
    <string name="lyy_info_address">详细地址</string>
    <string name="lyy_info_hint_address">请输入详细地址(最多80位)</string>
    <string name="lyy_info_unauthorized">未认证</string>
    <string name="lyy_info_authorized">已认证</string>
    <string name="lyy_select_gender">选择性别</string>
    <string name="lyy_gender_male">男</string>
    <string name="lyy_gender_female">女</string>
    <string name="lyy_gender_secret">保密</string>
    <string name="lyy_confirm">确定</string>
    <string name="lyy_camera">拍照</string>
    <string name="lyy_cancel">取消</string>
    <string name="lyy_from_album">从手机相册选择</string>
    <string name="lyy_hint_edit_nickname">请输入您的昵称</string>
    <string name="lyy_hint_edit_qq">请输入您的QQ</string>
    <string name="lyy_hint_old_edit_password">请输入原密码</string>
    <string name="lyy_hint_new_edit_password">请输入新密码</string>
    <string name="lyy_edit_nickname">修改昵称</string>
    <string name="lyy_edit_qq">修改QQ</string>
    <string name="lyy_edit_password">修改密码</string>
    <string name="lyy_edit_save">保存</string>
    <string name="lyy_account_auth_code_error">客官，您输入的验证码不对哦～</string>
    <string name="lyy_real_name">真实姓名</string>
    <string name="lyy_real_name_hint">请输入您的真实姓名</string>
    <string name="lyy_real_id_num">身份证号</string>
    <string name="lyy_real_id_num_hint">请输入您的身份证号</string>
    <string name="lyy_commit_auth">提交认证</string>
    <string name="lyy_real_auth_ed">已认证</string>
    <string name="lyy_real_auth_id_num_error">您输入的身份证号错误</string>
    <string name="lyy_address_add">新增收货地址</string>
    <string name="lyy_address_modify">修改收货地址</string>
    <string name="lyy_address_hint_name">收货人姓名</string>
    <string name="lyy_address_hint_phone">手机号码</string>
    <string name="lyy_address_hint_street">省、市、区</string>
    <string name="lyy_address_hint_detail">详细地址</string>
    <string name="lyy_address_default_for_save">保存为默认地址</string>
    <string name="lyy_address_default_for_setting">设置为默认地址</string>
    <string name="lyy_finish">完成</string>
    <string name="lyy_address_manager_title">收货地址管理</string>
    <string name="lyy_address_edit_title">新增收货地址</string>
    <string name="lyy_delete">删除</string>
    <string name="lyy_edit">编辑</string>
    <string name="lyy_task_title">积分任务</string>
    <string name="lyy_task_title_eg">Integration task</string>
    <string name="lyy_task_header_title_01">做任务，赚积分，换大礼</string>
    <string name="lyy_task_action_sign_in">去签到</string>
    <string name="lyy_task_action_task">做任务</string>
    <string name="lyy_task_action_score">领积分</string>
    <string name="lyy_load_error">加载失败</string>
    <string name="lyy_load_network">请检查您的网络重新加载</string>
    <string name="lyy_load_more">重新加载</string>
    <string name="lyy_exchange_history_title">兑换历史</string>
    <string name="lyy_buy_history_title">购买历史</string>
    <string name="lyy_exchange_empty_tip">亲，您暂时还没有购买记录哦～</string>
    <string name="lyy_activities_center_title">活动中心</string>
    <string name="lyy_activities_center_title_eg">Activity center</string>
    <string name="lyy_select_all">全选</string>
    <string name="lyy_balance">结算</string>
    <string name="lyy_service_label">开服列表</string>
    <string name="lyy_service_details">开服详情</string>
    <string name="lyy_service_details_eg">Service details</string>
    <string name="lyy_favourite_title">我的收藏</string>
    <string name="lyy_favourite_empty_tip">亲，您暂时还没有收藏任何东西哦～</string>
    <string name="lyy_score_record_title">积分明细</string>
    <string name="lyy_score_record_income">积分收入</string>
    <string name="lyy_score_record_outgo">积分消耗</string>
    <string name="lyy_notification_center_title">提示中心</string>
    <string name="lyy_notification_activities">精彩活动</string>
    <string name="lyy_notification_all">全部消息</string>
    <string name="lyy_gift_use_description_title">使用说明</string>
    <string name="lyy_gift_content_title">礼包内容</string>
    <string name="lyy_exchange_02">直接兑换</string>
    <string name="lyy_order_address_none">客官，请先添加您的收货地址哦～</string>
    <string name="lyy_confirm_order">确认</string>
    <string name="lyy_order_count">共0件 总计：￥0</string>
    <string name="lyy_order_commodity_count">共0件商品 小计：0</string>
    <string name="lyy_delivery_title">配送方式：</string>
    <string name="lyy_delivery_express">快递</string>
    <string name="lyy_exchange_agreement_title">《玩一下兑换协议》</string>
    <string name="lyy_agree">同意</string>
    <string name="lyy_order_title">确认订单</string>
    <string name="lyy_segment_detail_title">详情</string>
    <string name="lyy_segment_activity_title">活动</string>
    <string name="lyy_segment_notification_title">公告</string>
    <string name="lyy_segment_gift_title">礼包</string>
    <string name="lyy_game_pics_title">游戏截图</string>
    <string name="lyy_game_intro_title">游戏简介</string>
    <string name="lyy_task_score_menu_title">积分明细</string>
    <string name="lyy_contact_qq">客服QQ: 3541361517</string>
    <string name="lyy_contact_phone">客服热线: 023-86553188/023-86553588</string>
    <string name="lyy_feedback_hint">请写下您的问题或者建议，以便我们为您带来更好的产品体验</string>
    <string name="lyy_feedback_upload_pic_tip">上传照片</string>
    <string name="lyy_feedback_contact_tip">请输入您的联系方式，以便我们能尽快帮助您解决问题</string>
    <string name="lyy_feedback_contact_info">客服热线: 023-86553188/023-86553588 客服QQ: 3541361517\n工作时间: 9:00–18:30</string>
    <string name="lyy_feedback_count_hint_format">%1$d/%2$d</string>
    <string name="lyy_crop">裁剪</string>
    <string name="lyy_search_hint">请输入您要搜索的游戏</string>
    <string name="lyy_search_recent_title">最近搜索</string>
    <string name="lyy_search_recent_clear_all">清空</string>
    <string name="lyy_search_hot_title">热门搜索</string>
    <string name="lyy_sign_in_title">每日签到</string>
    <string name="lyy_share_qzone_title">QQ空间</string>
    <string name="lyy_share_qq_title">QQ</string>
    <string name="lyy_share_weibo_title">微博</string>
    <string name="lyy_share_wechat_title">微信</string>
    <string name="lyy_share_wzone_title">朋友圈</string>
    <string name="lyy_share_to_title">分享至</string>
    <string name="lyy_game_name">游戏名称</string>
    <string name="lyy_game_state">状态</string>
    <string name="lyy_game_time">时间</string>
    <string name="lyy_game_service_new_hint">最新开服</string>
    <string name="lyy_game_service_future_hit">开服预告</string>
    <string name="lyy_pay_hint_message">提示消息</string>
    <string name="lyy_pay_hint_error_message">填写信息与银行预留信息不一致</string>
    <string name="lyy_game_in_kind_shop_prompt">提示: 实物商品提交订单后3天内发货</string>
</resources>