<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="?attr/containerBackgroundLight"
    android:gravity="center_horizontal"
    android:orientation="vertical">

    <TextView
        android:id="@+id/share_title_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="18dp"
        android:text="@string/lyy_share_to_title"
        style="@style/Theme.LyyGame.Text.Title.Medium"/>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="36dp"
        android:layout_marginBottom="18dp"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/share_wzone_tv"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1.0"
            android:text="@string/lyy_share_wzone_title"
            android:gravity="center"
            android:clickable="true"
            android:foreground="?android:attr/selectableItemBackground"
            android:drawableTop="@drawable/ic_share_wzone"
            android:drawablePadding="9dp"
            style="@style/Theme.LyyGame.Text.Hint.Small"/>

        <TextView
            android:id="@+id/share_wechat_tv"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1.0"
            android:text="@string/lyy_share_wechat_title"
            android:gravity="center"
            android:clickable="true"
            android:foreground="?android:attr/selectableItemBackground"
            android:drawableTop="@drawable/ic_share_wechat"
            android:drawablePadding="9dp"
            style="@style/Theme.LyyGame.Text.Hint.Small"/>

        <TextView
            android:id="@+id/share_weibo_tv"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1.0"
            android:text="@string/lyy_share_weibo_title"
            android:gravity="center"
            android:clickable="true"
            android:foreground="?android:attr/selectableItemBackground"
            android:drawableTop="@drawable/ic_share_weibo"
            android:drawablePadding="9dp"
            style="@style/Theme.LyyGame.Text.Hint.Small"/>

        <TextView
            android:id="@+id/share_qq_tv"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1.0"
            android:text="@string/lyy_share_qq_title"
            android:gravity="center"
            android:clickable="true"
            android:foreground="?android:attr/selectableItemBackground"
            android:drawableTop="@drawable/ic_share_qq"
            android:drawablePadding="9dp"
            style="@style/Theme.LyyGame.Text.Hint.Small"/>

        <TextView
            android:id="@+id/share_qzone_tv"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1.0"
            android:text="@string/lyy_share_qzone_title"
            android:gravity="center"
            android:clickable="true"
            android:foreground="?android:attr/selectableItemBackground"
            android:drawableTop="@drawable/ic_share_qzone"
            android:drawablePadding="9dp"
            style="@style/Theme.LyyGame.Text.Hint.Small"/>



    </LinearLayout>

    <include layout="@layout/widget_divide_inset" />

    <TextView
        android:id="@+id/cancel_tv"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:text="@string/lyy_cancel"
        android:gravity="center"
        android:background="?android:attr/selectableItemBackground"
        android:clickable="true"
        style="@style/Theme.LyyGame.Text.Hint.14"/>



</LinearLayout>