<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:orientation="vertical"
              android:layout_width="match_parent"
              android:layout_height="wrap_content">


    <TextView
            android:id="@+id/male_tv"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:text="@string/lyy_gender_male"
            android:gravity="center"
            android:clickable="true"
            android:background="?android:attr/selectableItemBackground"
            style="@style/Theme.LyyGame.Text.Title.Large"/>

    <include layout="@layout/widget_divide_inset"/>

    <TextView
            android:id="@+id/female_tv"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:text="@string/lyy_gender_female"
            android:gravity="center"
            android:clickable="true"
            android:background="?android:attr/selectableItemBackground"
            style="@style/Theme.LyyGame.Text.Title.Large"/>

    <include layout="@layout/widget_divide_inset"/>
    <TextView
            android:id="@+id/secret_tv"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:text="@string/lyy_gender_secret"
            android:gravity="center"
            android:clickable="true"
            android:background="?android:attr/selectableItemBackground"
            style="@style/Theme.LyyGame.Text.Title.Large"/>

    <include layout="@layout/widget_divide_inset"/>

    <TextView
            android:id="@+id/cancel_tv"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:text="@string/lyy_cancel"
            android:gravity="center"
            android:clickable="true"
            android:background="?android:attr/selectableItemBackground"
            style="@style/Theme.LyyGame.Text.Title.Large"/>


</LinearLayout>