<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:layout_width="match_parent"
              android:layout_height="40dp"
              android:orientation="horizontal">

    <TextView
        android:id="@+id/game_service_name_tv"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:gravity="center"
        android:text="@string/lyy_game_name"
        android:textColor="@color/color_1c1c1c"
        android:textSize="11dp"/>

    <TextView
        android:id="@+id/game_service_state_tv"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:gravity="center"
        android:text="@string/lyy_game_state"
        android:textColor="@color/color_1c1c1c"
        android:textSize="11dp"/>

    <TextView
        android:id="@+id/game_service_time_tv"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:gravity="center"
        android:text="@string/lyy_game_time"
        android:textColor="@color/color_1c1c1c"
        android:textSize="11dp"/>


</LinearLayout>