<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:orientation="vertical"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
    android:background="?attr/containerBackground"
    android:gravity="center_horizontal">

    <TextView
        android:id="@+id/empty_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="140dp"
        android:text="@string/lyy_load_error"
        android:drawablePadding="20dp"
        android:layout_gravity="center"
        android:textColor="@color/color_666666"
        android:includeFontPadding="false"
        android:gravity="center"
        android:drawableTop="@drawable/ic_load_error"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:includeFontPadding="false"
        android:layout_marginTop="10dp"
        android:textColor="@color/color_999999"
        android:textSize="14dp"
        android:text="@string/lyy_load_network"/>

    <Button
        android:id="@+id/error_btn"
        android:layout_width="100dp"
        android:layout_height="35dp"
        android:textSize="13dp"
        android:layout_marginTop="15dp"
        android:background="@drawable/bg_load_error"
        android:textColor="@color/color_999999"
        android:gravity="center"
        android:text="@string/lyy_load_more"/>

</LinearLayout>